# rl-razor-mnist

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: sweep.yaml
runs/paper_replication/: analyze_drift_trajectory.sh  finetune.sh  finetune_sweep.sh  plot.sh  pretrain.sh
scripts/: analyze_drift_trajectory.py  finetune.py  plot.py  pretrain.py
src/rl_razor/: __init__.py  data.py  metrics.py  model.py  utils.py
src/rl_razor/training/: __init__.py  grpo.py  oracle.py  pretrain.py  sft.py
